# rizzle

./: .gitignore  Cargo.toml  Dizzle.toml  credentials  readme.md  x
dizzle/: Cargo.toml
dizzle/src/: main.rs
src/: decrypt.rs  error.rs  lib.rs  test.rs  util.rs
