
[package]
name = "rizzle"
version = "0.2.0"
edition = "2021"
description = "Deezer private API interface. Allows downloading songs and more."

[workspace.package]
authors = ["whyfoxcirc@gmx.de"]
keywords = ["deezer", "api", "music"]
categories = ["api-bindings", "multimedia", "multimedia::audio"]
repository = "github.com/foxcirc/rizzle"

[workspace]
members = ["dizzle"]

[features]
default = ["decode"]
decode = ["dep:minimp3"]

[dependencies]
serde = "1.0.163"
serde_json = "1.0.96"
serde_derive = "1.0.163"
tinyvec = { version = "1.6.0", features = ["std"] }
ureq = { version = "2.6.2", default-features = false, features = ["tls", "json"]}
aes = "0.8.2"
blowfish = "0.9.1"
cipher = { version = "0.4.4", features = ["std"] }
hex = "0.4.3"
md5 = "0.7.0"
generic-array = "0.14.7"
minimp3 = { version = "0.5.1", optional = true }

